--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,26 @@
-# Node modules (always ignore)
-node_modules/
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# Environment variables (API keys, passwords)
+node_modules
+dist
+dist-ssr
+*.local
+
 .env
-.env.local
-.env.*.local
 
-.vscode
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
