--- a/backend/package.json
+++ b/backend/package.json
@@ -3,24 +3,33 @@
   "version": "1.0.0",
   "main": "backend/server.js",
   "scripts": {
-    "dev" : "nodemon backend/server.js",
+    "dev": "nodemon backend/server.js",
     "start": "node backend/server.js"
   },
   "keywords": [],
   "author": "",
-  "type" : "module",
+  "type": "module",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@stripe/stripe-js": "^8.5.3",
+    "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
     "cloudinary": "^2.8.0",
     "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "framer-motion": "^12.23.24",
     "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.555.0",
     "mongoose": "^9.0.0",
-    "stripe": "^20.0.0"
+    "react-confetti": "^6.4.0",
+    "react-hot-toast": "^2.6.0",
+    "react-router-dom": "^6.26.2",
+    "recharts": "^3.5.1",
+    "stripe": "^20.0.0",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
