--- a/backend/package.json
+++ b/backend/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "main": "server.js",
   "type": "module",
-  "scripts": {
-    "dev": "nodemon server.js",
-    "start": "node server.js",
-    "build": "npm install --prefix frontend && npm run build --prefix frontend"
-  },
+ "scripts": {
+  "dev": "nodemon server.js",
+  "start": "node server.js",
+  "build": "npm install --prefix ../frontend && npm run build --prefix ../frontend"
+},
   "dependencies": {
     "@stripe/stripe-js": "^8.5.3",
     "axios": "^1.13.2",
@@ -32,3 +32,4 @@
     "nodemon": "^3.1.11"
   }
 }
+
